jackett/jackett.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "media"
  name: "jackett-ingress"
spec:
  rules:
  - host: "jackett.k3s.securait.local"
    http:
      paths:
        - backend:
            service:
              name: "jackett"
              port:
                number: 80
          path: "/"
          pathType: Prefix
  tls:
  - hosts:
    - jackett.k3s.securait.local
